--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.2",
-	"appid": "",
+	"appid": "wx0647fa8eeb43889c",
 	"projectname": "wyeth",
 	"condition": {
 		"search": {
